fix dropdown display after overflow:scroll

--- a/izanami-frontend/src/styles/components/_table.scss
+++ b/izanami-frontend/src/styles/components/_table.scss
@@ -8,15 +8,20 @@
   }
   tbody {
     background-color: var(--bg-color_level3);
-    td, th {
+    td,
+    th {
       color: var(--color_level3) !important;
     }
   }
   //   th {
   //     color:var(--color_level2) !important;
   //   }
-  .btn{
-    color: #FFF !important;
+  .btn {
+    color: #fff !important;
+  }
+
+  .dropdown {
+    position: inherit;
   }
 }
 
